Convert some Functions/Predicates to streams & lambdas (3)
Change-Id: I04f7aa685352941b2f29975ec42c58f5c5f70822